# ai-dev-playbook-java-python

./: build.gradle  settings.gradle
java_app/: build.gradle
java_app/src/main/java/com/moji/ai/: Application.java  JavaMLExample.java
java_app/src/main/java/com/moji/ai/config/: WebClientConfig.java
java_app/src/main/java/com/moji/ai/controller/: ProjectController.java
java_app/src/main/java/com/moji/ai/dto/: ConsensusPrediction.java  JavaMLResult.java  PredictionResponse.java  ProjectRequest.java
java_app/src/main/java/com/moji/ai/service/: ConsensusMLService.java  MLPredictionService.java
python_app/: first_ml_model.py  ml_service.py  pyproject.toml  requirements.txt  test_setup.py
